refactored with sass variables, added text below primary nav icons on hover
still need to add text below primary nav icons when utility bar is
open, in addition to hover

--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 /* BODY
 ---------------------------------------- */
 //make room at top of page for omni-nav
@@ -40,7 +42,7 @@ html.omni-nav-v2 {
       border: 1px solid #545454;
       border-radius: 0;
       font-weight: 800;
-      color: #676767;
+      color: $utility-nav-background-color;
 
 
     }
@@ -49,13 +51,13 @@ html.omni-nav-v2 {
       position: absolute;
       display: inline-block;
       top: 0; bottom: 0; left: 54px;
-      width: 16px;
-      height: 16px;
+      width: $square-icon-size;
+      height: $square-icon-size;
       margin: auto;
 
       svg {
         display: block;
-        fill: #676767;
+        fill: $utility-nav-background-color;
       }
 
       &.hide {
@@ -70,8 +72,8 @@ html.omni-nav-v2 {
   .utility-nav {
     display: none;
     width: 100%;
-    height: 60px;
-    background-color: #676767;
+    height: $primary-nav-height;
+    background-color: $utility-nav-background-color;
 
     nav {
       display: table;
@@ -142,7 +144,7 @@ html.omni-nav-v2 {
 
     .utility-list {
       display: table;
-      height: 60px;
+      height: $primary-nav-height;
       width: 100%;
 
       .search-type {
@@ -153,7 +155,7 @@ html.omni-nav-v2 {
     .utility-cell {
       display: table-cell;
       vertical-align: middle;
-      border-right: 1px solid #8a8a8a;
+      border-right: 1px solid $primary-nav-border-color;
       padding: 0 20px;
       cursor: pointer;
 
@@ -182,14 +184,14 @@ html.omni-nav-v2 {
       .utility-dropdown {
         background-color: #4d4d4d;
 
-        li:hover { background-color: #676767; }
+        li:hover { background-color: $utility-nav-background-color; }
       }
 
       a {
         font-size: 14px;
         line-height: 14px;
         font-weight: 500;
-        color: white;
+        color: $white;
         vertical-align: middle;
       }
     }
@@ -199,10 +201,10 @@ html.omni-nav-v2 {
   ---------------------------------------- */
   #primary-nav {
     @include pad(0 $base-spacing);
-    background-color: white;
-    width:100%;
-    height: 60px;
-    line-height: 60px;
+    background-color: $white;
+    width: 100%;
+    height: $primary-nav-height;
+    line-height: $primary-nav-height;
     overflow: visible;
     border-bottom: 1px solid #999999;
 
@@ -212,7 +214,7 @@ html.omni-nav-v2 {
     }
 
     @include media($large-screen) {
-      height: 60px;
+      height: $primary-nav-height;
     }
 
     &.search-open {
@@ -233,9 +235,6 @@ html.omni-nav-v2 {
           display: none;
         }      
       }
-
-
-
     }
 
     .nav-container {
@@ -257,41 +256,85 @@ html.omni-nav-v2 {
         font-size: 0; //to prevent div separation
         padding-left: 8px;
         float: right;
+        display: table;
+        height: 60px;
+        line-height: 60px;
 
         .primary-nav-action {
+          height: 60px;
+          display: table-cell;
+          position: relative;
+          line-height: 60px;
+
+          // without z-index, global nav dropdown overlaps primary icons
+          z-index: 668;
+          
           @include media($medium-screen) {
             width: 60px;
             background-color: #2f2f2f;
-            text-align: center;
             margin: 0 auto;
           }
+
+          .primary-nav-icon {
+            @include media($medium-screen) {
+
+              vertical-align: middle;
+              position: absolute;
+              text-align: center;
+              width: 60px;
+
+              svg {
+                width: 22px;
+                height: 22px;
+              }
+
+            }
+          }
+
+          &:hover, &:active {
+            .nav-icon-text {
+              @include bp(wildcard-max, $medium-screen) {
+                display: none;
+              }
+
+              line-height: normal;
+              bottom: 5px;
+              position: absolute;
+              width: 60px;
+              text-align: center;
+              
+              a {
+                display: inline-block;
+                font-size: 10px;
+                font-family: "futura-pt", verdana, sans-serif;
+                font-weight: 800;
+                text-transform: uppercase;
+                color: $white;
+              }
+            }    
+          }
+          
         }
 
         .primary-nav-icon svg {
           @include media($medium-screen) {
-            fill: white;
+            fill: $white;
           }
-
-
         }
       }
 
       .primary-nav-icon {
-        height: 60px;
-        line-height: 60px;
         cursor: pointer;
 
         svg { 
           vertical-align: middle; 
         }
-
-
       }
 
       .off-canvas-nav-trigger {
         padding-right: 12px;
-        height: 60px;
-        line-height: 60px;
+        height: $primary-nav-height;
+        line-height: $primary-nav-height;
         cursor: pointer;
         
         &.primary-nav-icon {
@@ -308,15 +351,17 @@ html.omni-nav-v2 {
       &.cu-global-nav {
         display: none;
         padding: 14px $base-spacing;
-        background-color: white;
-        border-top: 1px solid #8a8a8a;
+        background-color: $white;
+        border-top: 1px solid $primary-nav-border-color;
 
         @include media($medium-screen) {
           display: block;
           width: 100%;
         }
 
-        @include media($large-screen) {
+        /* the current content does not fit in 1024px across
+          1024-1030 causes style to break */
+        @media only screen and (min-width: 1030px) {
           display: inline-block;
           float: right;
           width: auto;
@@ -335,7 +380,7 @@ html.omni-nav-v2 {
           position: relative;
           vertical-align: middle;
           padding: 0 9px;
-          border-right: 1px solid #8a8a8a;
+          border-right: 1px solid $primary-nav-border-color;
           cursor: pointer;
 
           &:first-of-type {
@@ -359,13 +404,13 @@ html.omni-nav-v2 {
           .global-nav-dropdown {
             display: none;
             position: absolute;
-            width: 200px;
+            width: $primary-nav-dropdown-width;
             left: 0;
             padding-top: 20px;
-            background-color: white;
+            background-color: $white;
 
             li {
-              border-bottom: 1px solid #8a8a8a;
+              border-bottom: 1px solid $primary-nav-border-color;
               padding: 10px $base-spacing;
               font-size: 14px;
               margin-bottom: 0;
@@ -375,7 +420,7 @@ html.omni-nav-v2 {
               &:hover {
                 background-color: #eaeaea;
 
-                a{ color: $red; }
+                a { color: $red; }
               }
             }
 
@@ -394,7 +439,7 @@ html.omni-nav-v2 {
     display: none;
     position: absolute;
     top: 60px; left: 0px;
-    width: 200px;
+    width: $primary-nav-dropdown-width;
     z-index: 667;
 
     ul {
@@ -402,9 +447,9 @@ html.omni-nav-v2 {
     }
 
     li {
-      border-top: 1px solid white;
+      border-top: 1px solid $white;
       margin-bottom: 0;
-      padding: 10px 16px;
+      padding: 10px $base-spacing;
       cursor: pointer;
 
       &:first-of-type {
@@ -414,15 +459,15 @@ html.omni-nav-v2 {
       a {
         font-size: 14px;
         line-height: 14px;
-        color: white;
+        color: $white;
       }
     }
 
     svg {
-      width: 16px;
-      height: 16px;
+      width: $square-icon-size;
+      height: $square-icon-size;
       vertical-align: middle;
-      fill: white;
+      fill: $white;
     }
 
     &.social-dropdown {
@@ -451,7 +496,7 @@ html.omni-nav-v2 {
         }
 
           &:hover {
-            border: 1px solid white;
+            border: 1px solid $white;
           }
         }
       }
@@ -470,7 +515,7 @@ html.omni-nav-v2 {
   ---------------------------------------- */
   .cu-logo-wrapper {
     display: table;
-    height: 60px;
+    height: $primary-nav-height;
   }
 
   .secondary-logo {
@@ -512,7 +557,7 @@ html.omni-nav-v2 {
 
   .utility-nav-trigger{
     @include media($medium-screen) {
-      border-right: 1px solid #8a8a8a;
+      border-right: 1px solid $primary-nav-border-color;
     }
 
     .primary-nav-icon {
@@ -523,13 +568,11 @@ html.omni-nav-v2 {
           display: none;
         }      
       }
-
-/* .icon-close-search display: none */
     }
 
     .text {
       margin-bottom: 0;
-      color: white;
+      color: $white;
     }
   }
 
@@ -543,7 +586,8 @@ html.omni-nav-v2 {
     .login-menu {
       display: none;
       position: absolute;
-      top: 60px; right: -20px;
+      top: 60px; 
+      right: -20px;
       width: 175px;
       background-color: #2f2f2f;
       text-align: left;
@@ -558,9 +602,9 @@ html.omni-nav-v2 {
       }
 
       li {
-        border-top: 1px solid white;
+        border-top: 1px solid $white;
         margin-bottom: 0;
-        padding: 10px 16px;
+        padding: 10px $base-spacing;
         cursor: pointer;
 
         &:first-of-type {
@@ -574,15 +618,16 @@ html.omni-nav-v2 {
         a {
           font-size: 14px;
           line-height: 14px;
-          color: white;
+          color: $white;
+          padding-left: 9px;
         }
       }
 
       svg {
-        width: 16px;
-        height: 16px;
+        width: $square-icon-size;
+        height: $square-icon-size;
         vertical-align: middle;
-        fill: white;
+        fill: $white;
 
       }
     }
