--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
@@ -1,6 +1,7 @@
+@import "variables";
 
 /* OFF CANVAS NAV
-*************************************/
+----------------------------------------------*/
 
 
 .close {
@@ -19,8 +20,8 @@
   height: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
-  z-index: 99999;
-  background-color: #676767;
+  z-index: 669;
+  background-color: $cu-off-canvas-nav-utility-background;
   @include transition(all, 0.375s, ease-in-out);
 
   @include bp(m) {
@@ -29,8 +30,8 @@
   }
 
   @media (min-width: 780px) {
-    left: -400px;
-    width: 400px;
+    left: -($cu-off-canvas-nav-desktop-width);
+    width: $cu-off-canvas-nav-desktop-width;
   }
 
   ul, ol {
@@ -44,13 +45,13 @@
 
   .main-menu {
       padding: 18px;
-      color: #eaeaea;
-      background: #2f2f2f;
+      color: $cu-off-canvas-nav-background;
+      background: $cu-off-canvas-nav-text;
       font-size: 13px;
       font-weight: 800;
       letter-spacing: 0.25px;
       text-transform: uppercase;
-      border-bottom: 1px solid #c1c1c1;
+      border-bottom: 1px solid $cu-off-canvas-nav-border-secondary;
     }
 
   .off-canvas-header {
@@ -94,10 +95,10 @@
 
 
       > li {
-        background-color: #ffffff;
+        background-color: $white;
         list-style: none;
         display: table;
-        border-bottom: 1px solid #cfcfcf;
+        border-bottom: 1px solid $cu-off-canvas-nav-border;
         position: relative;
         width: 100%;
         height: 46px;
@@ -107,7 +108,7 @@
           display: none;
 
           > li {
-            border-top: 1px solid #c1c1c1;
+            border-top: 1px solid $cu-off-canvas-nav-border-secondary;
             margin: 0;
 
             > a {
@@ -115,7 +116,7 @@
               position: relative;
               display: block;
               vertical-align: middle;
-              color: #2f2f2f;
+              color: $cu-off-canvas-nav-text;
 
             }
 
@@ -146,7 +147,7 @@
         }
 
         > a {
-          color: #2f2f2f;
+          color: $cu-off-canvas-nav-text;
           padding: 18px;
           position: relative;
           display: block;
@@ -161,7 +162,7 @@
 
 
         .toggle {
-          background-color: #eaeaea;
+          background-color: $cu-off-canvas-nav-background;
           width: 46px;
           line-height: 45px;
           text-align: center;
@@ -193,10 +194,10 @@
     > ul {
 
       > li {
-        background: #676767;
+        background: $cu-off-canvas-nav-utility-background;
         list-style: none;
         display: table;
-        border-bottom: 1px solid #cfcfcf;
+        border-bottom: 1px solid $cu-off-canvas-nav-border;
         position: relative;
         width: 100%;
         height: 46px;
@@ -206,13 +207,13 @@
           display: none;
 
           > li {
-            border-top: 1px solid #c1c1c1;
+            border-top: 1px solid $cu-off-canvas-nav-border-secondary;
             margin: 0;
 
             > a {
               display: block;
               padding: 0.5em 1.325em;
-              color: #eaeaea;
+              color: $cu-off-canvas-nav-background;
               vertical-align: middle;
               position: relative;
               
@@ -245,7 +246,7 @@
         }
 
         > a {
-          color: #eaeaea;
+          color: $cu-off-canvas-nav-background;
           padding: 18px;
           position: relative;
           display: block;
@@ -287,13 +288,12 @@
               width: 13px;
               height: 13px;
               vertical-align: middle;
-              fill: #eaeaea;
+              fill: $cu-off-canvas-nav-background;
             }
           }
         }         
       }
     }
-
     
   }
 }
@@ -304,7 +304,7 @@
 
 .off-canvas-overlay {
   background-color: $black;
-  z-index: 99998;
+  z-index: 668;
   position: fixed;
   visibility: hidden;
   opacity: 0;
