--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -114,11 +114,7 @@ html.omni-nav-v2 {
 
       .utility-nav-container {
 
-        .icon-open-search {
-          &.hide {
-            display: none;
-          }
-        }
+        
         
         //only search container displayed on medium screen
         @include media($medium-screen) {
@@ -291,7 +287,7 @@ html.omni-nav-v2 {
             }
           }
 
-          &:hover, &:active {
+          &:hover {
             .nav-icon-text {
               @include bp(wildcard-max, $medium-screen) {
                 display: none;
@@ -312,6 +308,30 @@ html.omni-nav-v2 {
                 color: $white;
               }
             }    
+          }
+
+          //only search text ("Find") stays when utility nav is open
+          &.utility-open {
+            .nav-icon-text.search { 
+              @include bp(wildcard-max, $medium-screen) {
+                display: none;
+              }
+
+              line-height: normal;
+              bottom: 5px;
+              position: absolute;
+              width: 60px;
+              text-align: center;
+              
+              a {
+                display: inline-block;
+                font-size: 10px;
+                font-family: "futura-pt", verdana, sans-serif;
+                font-weight: 800;
+                text-transform: uppercase;
+                color: $white;
+              }
+            }
           }
           
         }
