rewrote javascript using module pattern

--- a/app/views/omni_nav/omni_nav_v2.html.erb
+++ b/app/views/omni_nav/omni_nav_v2.html.erb
@@ -33,7 +33,7 @@
         </a>
 
 
-        <div class="nav-icon-text"><a>Find</a></div>
+        <div class="nav-icon-text search"><a>Find</a></div>
 
 
         
