--- a/subprojects/degrees-and-programs/source/static/app/assemble/includes/_js-main.hbs
+++ b/subprojects/degrees-and-programs/source/static/app/assemble/includes/_js-main.hbs
@@ -1,6 +1,7 @@
 <!-- build:js js/degreesAndPrograms.js -->
 <script src="bower_components/foundation-sites/dist/foundation.js"></script>
 <script src="js/plugins/jquery.dotdotdot.min.js"></script>
+<script src="js/plugins/jquery.auto-complete.min.js"></script>
 <script src="js/customSelect.js"></script>
 <script src="js/degreesAndPrograms.js"></script>
 <script src="js/degreesAndProgramsApp.js"></script>
