--- a/app/views/omni_nav/omni_nav_v2.html.erb
+++ b/app/views/omni_nav/omni_nav_v2.html.erb
@@ -14,8 +14,8 @@
       </a>
     </div>
 
-    <div class="nav-container cu-logo-container">
-      <div class="cu-logo-wrapper">
+    <div class="nav-container logo-container">
+      <div class="logo-wrapper">
         <div class="primary-logo">
           <a href="${domain}" title="Chapman University Website Home Page">
             <svg width="200px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 273.58 28.08">
@@ -56,7 +56,7 @@
           <a>Find</a>
         </div>
       </div>
-      <div class="primary-nav-action cu-login-trigger">
+      <div class="primary-nav-action login-trigger">
         <a class="primary-nav-icon" role="button">
           <svg viewBox="0 0 16 16">
             <g>
@@ -129,7 +129,7 @@
       <%= render 'omni_nav/search_box' %>
     </div>
 
-    <div class="nav-container cu-global-nav">
+    <div class="nav-container global-nav">
       <%= render 'omni_nav/global_nav' %>
     </div>
 
