Adds demo for branded masthead.

--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -524,6 +524,7 @@ html.omni-nav-v2 {
     height: $primary-nav-height;
   }
 
+  // Used in branded pages (e.g. /law). See &.branded section below.
   .secondary-logo {
     display: none;
   }
