--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -57,6 +57,7 @@
       <ul>
         <li><%= link_to 'Static Sample', '/omninav' %></li>
         <li><%= link_to 'Static Sample v2', '/omninav_v2' %></li>
+        <li><%= link_to 'Static Sample v2 - Branded', '/omninav_v2/law' %></li>
       </ul>
     </div>
   </div>
