I had to restore cu- prefix to cu-logo-wrapper because it is used in off_canvas_nav partial which is shared with old omninav. Argh.

--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -337,7 +337,7 @@ html.omni-nav-v2 {
           padding: 0px;
         }
 
-        .logo-wrapper {
+        .cu-logo-wrapper {
           height: 32px;
           line-height:32px;
         }
@@ -531,7 +531,7 @@ html.omni-nav-v2 {
 
   /* CU LOGOS
   ---------------------------------------- */
-  .logo-wrapper {
+  .cu-logo-wrapper {
     display: table;
     height: $primary-nav-height;
   }
