--- a/app/views/omni_nav/omni_nav_v2.html.erb
+++ b/app/views/omni_nav/omni_nav_v2.html.erb
@@ -15,7 +15,7 @@
     </div>
 
     <div class="nav-container logo-container">
-      <div class="logo-wrapper">
+      <div class="cu-logo-wrapper">
         <div class="primary-logo">
           <a href="${domain}" title="Chapman University Website Home Page">
             <svg width="200px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 273.58 28.08">
