changes from ces to education for attallah college rename
setup new theme, new color variables, new images for school logo in
off-canvas nav

--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -71,6 +71,10 @@ $ces-primary: #003764;
 $ces-secondary: #00457d;
 $ces-tertiary: #012746;
 
+$education-primary: #003764;
+$education-secondary: #00457d;
+$education-tertiary: #012746;
+
 $communication-primary: #c88508;
 $communication-secondary: #cb9126;
 $communication-tertiary: #b66f00;
