--- a/app/assets/stylesheets/omni_nav/modules/off-canvas-nav.scss
+++ b/app/assets/stylesheets/omni_nav/modules/off-canvas-nav.scss
@@ -325,6 +325,12 @@
 		background-repeat: no-repeat;
 		background-size: contain;
 	}
+	.education {
+		background: image-url('off-canvas-header-education.png'); // IE 8
+		background: image-url('off-canvas-header-education.svg'), linear-gradient(transparent, transparent);
+		background-repeat: no-repeat;
+		background-size: contain;
+	}
 	.dodge {
 		background: image-url('off-canvas-header-dodge.png'); // IE 8
 		background: image-url('off-canvas-header-dodge.svg'), linear-gradient(transparent, transparent);
