one more fix to add Attallah to school name

--- a/app/views/widgets/shared/_omninav.html
+++ b/app/views/widgets/shared/_omninav.html
@@ -302,7 +302,7 @@
                           <a href="https://blogs.chapman.edu/business/" title="Argyros School of Business &amp; Economics">Argyros School of Business &amp; Economics</a>
                         </li>
                         <li>
-                          <a href="https://blogs.chapman.edu/ces/" title="Attallah College of Educational Studies">College of Educational Studies</a>
+                          <a href="https://blogs.chapman.edu/ces/" title="Attallah College of Educational Studies">Attallah College of Educational Studies</a>
                         </li>
                         <li>
                           <a href="https://blogs.chapman.edu/copa/" title="College of Performing Arts">College of Performing Arts</a>
