--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -657,12 +657,15 @@ html.omni-nav-v2 {
   *************************************/
   &.branded {
 
-    @include media($large-screen) {}
-    @include media($medium-screen) {}
-
-    .primary-logo {
-      padding-right: 20px;
+    @include media($medium-screen) {
+      .primary-logo {
+        padding-right: 20px;
+      }
     }
+
+    @include media($large-screen) {}
+
+
 
     .secondary-logo {
       display: none;
