Moves omninav v2 markup into its own folder to better differentiate from v1.

--- a/app/views/omni_nav_v2/omninav.html.erb
+++ b/app/views/omni_nav_v2/omninav.html.erb
@@ -1,6 +1,6 @@
 <div id="omni-nav-v2" class="<%= @branding_class %>">
 
-  <%= render 'omni_nav/utility_nav' %>
+  <%= render 'omni_nav_v2/utility_nav' %>
 
   <div id="primary-nav">
 
@@ -17,7 +17,7 @@
     <div class="nav-container logo-container">
       <div class="cu-logo-wrapper">
         <div class="primary-logo">
-          <a href="${domain}" title="Chapman University Website Home Page">
+          <a href="/" title="Chapman University Website Home Page">
             <svg width="200px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 273.58 28.08">
               <defs>
                 <style>.cls-1 { fill: #98002e; } .cls-2 { fill: #231f20; }</style>
@@ -126,15 +126,15 @@
     </div>
 
     <div class="nav-container primary-nav-search">
-      <%= render 'omni_nav/search_box' %>
+      <%= render 'omni_nav_v2/search_box' %>
     </div>
 
     <div class="nav-container global-nav">
-      <%= render 'omni_nav/global_nav' %>
+      <%= render 'omni_nav_v2/global_nav' %>
     </div>
 
   </div>
 
-  <%= render 'omni_nav/off_canvas_nav' %>
+  <%= render 'omni_nav_v2/off_canvas_nav' %>
 
 </div>
