Implements omninav v2 branded masthead for tablet screen dimensions.

--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -331,15 +331,19 @@ html.omni-nav-v2 {
         }
       }
 
-      &.off-logo-container {
+      &.logo-container {
         @include media($medium-screen) {
           margin: 13px 16px 13px 0px;
           padding: 0px;
-        }
 
-        .cu-logo-wrapper {
-          height: 32px;
-          line-height:32px;
+          .cu-logo-wrapper {
+            height: 32px;
+            line-height:32px;
+
+            a.branded-logo {
+              vertical-align: baseline;
+            }
+          }
         }
       }
 
