--- a/app/views/omni_nav_v2/omninav.html.erb
+++ b/app/views/omni_nav_v2/omninav.html.erb
@@ -1,4 +1,4 @@
-<div id="omni-nav-v2" class="<%= @branding_class %>">
+<div id="omni-nav-v2" class="<%= @brand_class %>">
 
   <%= render 'omni_nav_v2/utility_nav' %>
 
@@ -31,7 +31,7 @@
           </a>
         </div>
         <div class="secondary-logo">
-          <a class="branded-logo" href="#">Fowler School of Law</a>
+          <a class="branded-logo" href="#"><%= @brand_text %></a>
         </div>
       </div>
     </div>
