--- a/app/views/layouts/omninav.erb
+++ b/app/views/layouts/omninav.erb
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
   <meta content="width=device-width, initial-scale=1, minimum-scale=1" name="viewport" />
-  <title><%= params[:page].to_s.titleize %></title>
+  <title>OmniNav Demo</title>
 
   <%# Removed Facebook og meta property tags. %>
 
