--- a/app/views/omni_nav_v2/_utility_nav.html.erb
+++ b/app/views/omni_nav_v2/_utility_nav.html.erb
@@ -60,7 +60,7 @@
       <ul class="utility-list">
         <li class="utility-cell search-type utility-has-dropdown"><a>Search from</a></li>
         <li class="utility-cell">
-          <%= render 'omni_nav/search_box' %>
+          <%= render 'omni_nav_v2/search_box' %>
         </li>
       </ul>
     </div>
