--- a/app/views/omni_nav_v2/omninav.html.erb
+++ b/app/views/omni_nav_v2/omninav.html.erb
@@ -6,7 +6,7 @@
 
     <div class="nav-container left-nav-container">
       <a href="#" class="off-canvas-trigger primary-nav-icon" id="js-off-canvas-trigger" role="button" title="Access links to the pages within this section of the website and to other sections of the website" aria-label="Access links to the pages within this section of the website and to other sections of the website">
-        <svg viewBox="0 0 16 16">
+        <svg class="hamburger-icon" viewBox="0 0 16 16">
           <path d="M1 3h14v2h-14v-2z"></path>
           <path d="M1 7h14v2h-14v-2z"></path>
           <path d="M1 11h14v2h-14v-2z"></path>
