--- a/subprojects/degrees-and-programs/source/static/app/assemble/degrees-and-programs.hbs
+++ b/subprojects/degrees-and-programs/source/static/app/assemble/degrees-and-programs.hbs
@@ -352,7 +352,7 @@ cascade-build: true
                             <ul>
                                 <li><a href="../business/index.aspx" title="Argyros School of Business &amp; Economics">Argyros School of Business &amp; Economics</a>
                                 </li>
-                                <li><a href="../ces/index.aspx" title="College of Educational Studies">College of Educational Studies</a>
+                                <li><a href="../ces/index.aspx" title="Attallah College of Educational Studies">Attallah College of Educational Studies</a>
                                 </li>
                                 <li><a href="../copa/index.aspx" title="College of Performing Arts">College of Performing Arts</a>
                                 </li>
@@ -401,7 +401,7 @@ cascade-build: true
                                     <a href="https://blogs.chapman.edu/business/" title="Argyros School of Business &amp; Economics">Argyros School of Business &amp; Economics</a>
                                 </li>
                                 <li>
-                                    <a href="https://blogs.chapman.edu/ces/" title="College of Educational Studies">College of Educational Studies</a>
+                                    <a href="https://blogs.chapman.edu/ces/" title="Attallah College of Educational Studies">Attallah College of Educational Studies</a>
                                 </li>
                                 <li>
                                     <a href="https://blogs.chapman.edu/copa/" title="College of Performing Arts">College of Performing Arts</a>
