--- a/app/views/omni_nav_v2/omninav.html.erb
+++ b/app/views/omni_nav_v2/omninav.html.erb
@@ -18,7 +18,7 @@
       <div class="cu-logo-wrapper">
         <div class="primary-logo">
           <a href="/" title="Chapman University Website Home Page">
-            <svg width="200px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 273.58 28.08">
+            <svg class="chapman-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 273.58 28.08">
               <defs>
                 <style>.cls-1 { fill: #98002e; } .cls-2 { fill: #231f20; }</style>
               </defs>
